--- a/myzayna_backend/myzayna_backend_main/package.json
+++ b/myzayna_backend/myzayna_backend_main/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^17.2.0",
     "elevenlabs-node": "^1.2.0",
     "express": "^4.18.2",
-    "openai": "^4.26.0"
+    "openai": "^4.26.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
